<resources>
    <string name="app_name">DailyMenu</string>
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="createAccount">Not have an accout ? Create Account</string>
    <string name="have_acc">Already have an account</string>
    <string name="clientId">683155729378-5gso7f4b7rkpkm14b2m5heeruav65bd7.apps.googleusercontent.com</string>
    <string name="dayMeal">Meal of the day</string>
    <string name="country">Country</string>
    <string name="catigory">Categories</string>
    <string name="area">Areas</string>
    <string name="or">OR</string>
    <string name="skip">Skip</string>
    <string name="ingrediant">Ingrediants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="calender">Menu</string>
    <string name="fav">Favourite</string>
    <string name="profile">Profile</string>
    <string name="steps">Steps</string>
    <string name="logout">LogOut</string>
    <string name="favs">Your Favourits</string>
    <string name="plans">Your Plans</string>
    <string name="Close">Close</string>
</resources>