<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
   >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Search.SearchFragment">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rectangler_edit_text"
                android:ems="10"
                android:hint="@string/search"
                android:inputType="text"
                android:isScrollContainer="true"
                android:paddingLeft="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_search"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cat"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catigory" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/area"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/area" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ing"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/ingrediant" />
            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_filters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>